fix logo footer

--- a/Tiki.vn/Home/HTML/account.html
+++ b/Tiki.vn/Home/HTML/account.html
@@ -656,7 +656,7 @@
                                 " alt="">
                             </a>
                             <a href="https://play.google.com/store/apps/details?id=vn.tiki.app.tikiandroid&pli=1">
-                                <img class="icon-connect"  src="https://cdn.prod.website-files.com/60d438ba9c417a7c5544b599/60df5265787a00e19c6c48fa_Download_on_the_App_Store_Badge_VN_RGB_blk_100217.png" alt="">
+                                <img class="icon-connect"  src="/Tiki.vn/Home/IMG/img-header-footer/playstore.png" alt="">
                             </a>
                         </div>
                     </div>
