--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -2282,7 +2282,7 @@
                                         <img class="logo-connect" src="/Tiki.vn/Home/IMG/img-header-footer/youtube.png" alt="">
                                     </a>
                                     <a href="https://zalo.me/589673439383195103">
-                                        <img class="logo-connect" src="/Tiki.vn/Home/IMG/img-header-footer/logo-zalo.png" alt="">
+                                        <img class="logo-connect" src="/Tiki.vn/Home/IMG/img-header-footer/logo-zalo.png" alt=""git>
                                     </a>
                                 <h4 class="text-block">Tải ứng dụng trên điện thoại</h4>
                                 <div class="icon-install">
