--- a/Tiki.vn/Home/HTML/Voucher.html
+++ b/Tiki.vn/Home/HTML/Voucher.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/voucher.css">
+    <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Tiki.vn/Home/fontawesome-free-6.6.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -20,7 +21,7 @@
     <header>
         <div class="container-menu">
             <!--logo menu-->
-            <a class="home-logo" href="/Tiki.vn/Home/HTML/index.html">
+            <a class="home-logo" href="/index.html">
                 <div>
                     <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                     <div><span id="text"><b>Tốt & Nhanh</b></span></div>
@@ -39,7 +40,7 @@
                         <div class="shortcut-home">
                             <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
                             " alt="shortcut-home">
-                            <a class="link-shortcut-home" href="/Tiki.vn/Home/HTML/index.html">Trang chủ</a>
+                            <a class="link-shortcut-home" href="/index.html">Trang chủ</a>
                         </div>
                         <div class="shortcut-user">
                             <a class="link-shortcut-user" href="/Tiki.vn/Home/HTML/account.html">
@@ -62,7 +63,7 @@
                                         href=""><span>Thông tin hỗ trợ</span><br></a>
                                 </div>
                                 <div class="list-option">
-                                    <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
+                                    <a class="text-list-shorcut" href="/index.html" href=""><span>Đăng xuât</span><br></a>
                                 </div>
                             </div>
                         </div>
