--- a/Tiki.vn/Home/HTML/account.html
+++ b/Tiki.vn/Home/HTML/account.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container-header">
             <div class="home-logo">
-                <a class="link-home-logo" href="index.html">
+                <a class="link-home-logo" href="/index.html">
                     <div>
                         <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                         <div><span id="text"><b >Tốt & Nhanh</b></span></div> 
@@ -40,7 +40,7 @@
                         <div class="shortcut-home">
                             <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
                             " alt="shortcut-home">
-                            <a class="link-shortcut-home" href="/Tiki.vn/Home/HTML/index.html">Trang chủ</a>
+                            <a class="link-shortcut-home" href="/index.html">Trang chủ</a>
                         </div>
                         <div class="shortcut-user">
                             <a class="link-shortcut-user" href="">
