--- a/Tiki.vn/Home/HTML/signin.html
+++ b/Tiki.vn/Home/HTML/signin.html
@@ -32,7 +32,7 @@
             </span>
         </div>
         <div class="SI-button">
-            <a href="/Tiki.vn/Home/HTML/index.html"><button class="style-button">SIGN IN</button></a>
+            <a href="/index.html"><button class="style-button">SIGN IN</button></a>
         </div>
         <div class="other">
             <a class="f-pass" href=""><div >Forgot password</div></a>
