--- a/Tiki.vn/Home/HTML/Astra.html
+++ b/Tiki.vn/Home/HTML/Astra.html
@@ -22,11 +22,11 @@
     <header>
         <div class="container-menu">
             <!--logo menu-->
-            <a class="home-logo" href="/Tiki.vn/Home/HTML/index.html">
-                <div>
+            <a class="home-logo" href="/index.html">
+                <a class="link-home-logo" href="/index.html">
                     <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                     <div><span id="text"><b>Tốt & Nhanh</b></span></div>
-                </div>
+                </a>
             </a>
             <div class="container-search">
                 <div class="middle-container">
@@ -41,7 +41,7 @@
                         <div class="shortcut-home">
                             <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
                             " alt="shortcut-home">
-                            <a class="link-shortcut-home" href="/Tiki.vn/Home/HTML/index.html">Trang chủ</a>
+                            <a class="link-shortcut-home" href="/index.html">Trang chủ</a>
                         </div>
                         <div class="shortcut-user">
                             <a class="link-shortcut-user" href="/Tiki.vn/Home/HTML/account.html">
@@ -64,7 +64,7 @@
                                         href=""><span>Thông tin hỗ trợ</span><br></a>
                                 </div>
                                 <div class="list-option">
-                                    <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
+                                    <a class="text-list-shorcut" href="/index.html" href=""><span>Đăng xuât</span><br></a>
                                 </div>
                             </div>
                         </div>
