--- a/Tiki.vn/Home/HTML/favorite_list.html
+++ b/Tiki.vn/Home/HTML/favorite_list.html
@@ -24,10 +24,10 @@
         <div class="container-menu">
             <!--logo menu-->
             <div class="home-logo">
-                <div>
+                <a class="link-home-logo" href="/index.html">
                     <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                     <div><span id="text"><b >Tốt & Nhanh</b></span></div> 
-                </div>
+                </a>
             </div>
             <div class="container-search">
                 <div class="middle-container">
@@ -41,7 +41,7 @@
                         <div class="shortcut-home">
                             <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
                             " alt="shortcut-home">
-                            <a class="link-shortcut-home" href="/Tiki.vn/Home/HTML/index.html">Trang chủ</a>
+                            <a class="link-shortcut-home" href="/index.html">Trang chủ</a>
                         </div>
                         <div class="shortcut-user">
                             <a class="link-shortcut-user" href="/Tiki.vn/Home/HTML/account.html">
@@ -59,7 +59,7 @@
                                     <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/support_center.html" href=""><span>Thông tin hỗ trợ</span><br></a>
                                 </div>
                                 <div class="list-option">
-                                    <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
+                                    <a class="text-list-shorcut" href="/index.html" href=""><span>Đăng xuât</span><br></a>
                                 </div>
                             </div>
                         </div>
