--- a/Tiki.vn/Home/HTML/my_announcement.html
+++ b/Tiki.vn/Home/HTML/my_announcement.html
@@ -23,7 +23,7 @@
         <header>
             <div class="container-header">
                 <div class="home-logo">
-                    <a class="link-home-logo" href="index.html">
+                    <a class="link-home-logo" href="/index.html">
                         <div>
                             <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                             <div><span id="text"><b >Tốt & Nhanh</b></span></div> 
@@ -42,7 +42,7 @@
                             <div class="shortcut-home">
                                 <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
                                 " alt="shortcut-home">
-                                <a class="link-shortcut-home" href="/Tiki.vn/Home/HTML/index.html">Trang chủ</a>
+                                <a class="link-shortcut-home" href="/index.html">Trang chủ</a>
                             </div>
                             <div class="shortcut-user">
                                 <a class="link-shortcut-user" href="">
@@ -60,7 +60,7 @@
                                         <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/support_center.html" href="/Tiki.vn/Home/HTML/support_center.html"><span>Thông tin hỗ trợ</span><br></a>
                                     </div>
                                     <div class="list-option">
-                                        <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
+                                        <a class="text-list-shorcut" href="/index.html" href=""><span>Đăng xuât</span><br></a>
                                     </div>
                                 </div>
                             </div>
