--- a/Tiki.vn/Home/HTML/book-care.html
+++ b/Tiki.vn/Home/HTML/book-care.html
@@ -22,12 +22,12 @@
     <header>
         <div class="container-menu">
             <!--logo menu-->
-            <a class="home-logo" href="/index.html">
+            <div class="home-logo" >
                 <a class="link-home-logo" href="/index.html">
                     <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
                     <div><span id="text"><b>Tốt & Nhanh</b></span></div>
                 </a>
-            </a>
+            </div>
             <div class="container-search">
                 <div class="middle-container">
                     <div class="search">
